--- a/src/Jili/EmarBundle/Resources/views/Websites/hot_on_cps.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/hot_on_cps.html.twig
@@ -8,11 +8,7 @@
     
             <li>
               <p class="img">
-                 {% if app.session.has('uid') %}
-                 <a href="{{  row.webUrl| replace( {'APIMemberId': app.session.get('uid') } ) }}" rel="nofollow" target="_blank"><img width="75" height="37" src="{{ row.logoUrl }}"></a>
-                {% else %}
-                    <a href="#"  onclick="javascript: return false;"><img width="75" height="37" src="{{ row.logoUrl }}"></a>
-                {% endif %}
+                 <a href="{{  path('jili_emar_default_redirect') ~ '?m=' ~ row.webUrl|url_encode }}" rel="nofollow" target="_blank"><img width="75" height="37" src="{{ row.logoUrl }}"></a>
               </p>
               {% if row.commission > 0 %}
                   <p class="rebate">最高返<em>{{  row.commission }}%</em></p>
