--- a/src/Jili/ApiBundle/Resources/views/User/login.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/login.html.twig
@@ -40,6 +40,9 @@ function clear(){
       <li>
       <input id="remember_me" name="remember_me" type="checkbox" value="1">记住我
       </li>
+      {% if app.session.has('goToUrl') and app.session.get('goToUrl')|length > 0  %}
+      <input name="referer" type="hidden" value="{{ app.session.get('goToUrl') }}">
+      {% endif %}
       <li class="loginBtn"><input name="" type="submit" class="submit" value="&nbsp;"><a class="forget" href="{{ asset(path('_user_resetPwd'),'cdn1') }}" target="_blank">忘记密码</a></li>
       <!--  <li class="otherLogin">使用合作网站登录<a class="weibo" href="#"></a><a class="qq" href="#"></a></li>-->
     </ul>
