--- a/src/Jili/EmarBundle/Resources/views/Ghs/partial_on_cps.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Ghs/partial_on_cps.html.twig
@@ -31,14 +31,14 @@
     <ul class="commodityUl btbn clearfix">
 {% for row in ghs_pdts %}
       <li>
-        <dt><a href="{{ row.ghs_o_url|replace({ 'APIMemberId':app.session.get('uid') }) }}" target="_blank" rel="nofollow"><img src="{{ row.pic_url }}" height="auto" width="269"></a></dt>
+        <dt><a href="{{ path('jili_emar_default_redirect') ~ '?m=' ~ row.ghs_o_url|url_encode }}" target="_blank" ><img src="{{ row.pic_url }}" height="auto" width="269"></a></dt>
         <dd>
          <span class="fl corGlobGray">¥{{ row.p_name }}</span>
 		 <span class="fl dispalyBlock fontNormal corLightGray">{{ row.web_name }}</span>
          <span class="price fl">¥{{ row.ghs_price }}<em class="fontNormal corLightGray">¥{{ row.ori_price }}</em></span>
          <span class="fl fontNormal corLightGray">总销量：<em class="corLightRed">{{ row.bought }}件</em></span>
          <div class="buyBtn" style="display: none;">
-       	    <a href="{{ row.ghs_o_url|replace({ 'APIMemberId':app.session.get('uid') }) }}" target="_blank">立即抢购</a>
+       	    <a href="{{ path('jili_emar_default_redirect')  ~ '?m=' ~ row.ghs_o_url  }}" target="_blank">立即抢购</a>
          </div>
         </dd>
       </li>
@@ -46,24 +46,3 @@
 {% endfor %}
 
     </ul>
-{#
-      array (
-        'pid' => 'ghs-000100-19653',
-        'web_name' => '正品SOSO',
-        'p_name' => '富安娜天然护芦荟棉四件套',
-        'ghs_o_url' => 'http://m.gouwuke.com/gwJuHeMonitor.do?UCId=17497&type=ghs:open:450039&pid=ghs-000100-19653&mid=450039&e=APIMemberId&t=http://www.zpsoso.com/team.php?id=54453',
-        'ghs_catid' => '000100',
-        'ghs_cname' => '家居日用',
-        'weight' => '1998',
-        'ori_price' => '1980',
-        'ghs_price' => '89',
-        'discount' => '0.4',
-        'bought' => '95776',
-        'pic_url' => 'http://image.yiqifa.com/gwk_images/ghs/ghs_20140227152050_1176.jpg',
-        'post' => '不包邮',
-        'begin_time' => '2013-08-18 00:00:00',
-        'end_time' => '2014-04-30 00:00:01',
-      ),
-
-
-#}
