--- a/src/Jili/EmarBundle/Resources/views/Product/retrieve_page.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Product/retrieve_page.html.twig
@@ -1,20 +1,14 @@
 {% for row in products %}
+{%  set href_ = path('jili_emar_default_redirect') ~ '?m=' ~ row.p_o_url|url_encode %}
         <li>
         <dt class="image curPt">
-	       {% if app.session.has('uid')  %}
-		   <a href="{{ row.p_o_url|replace( { 'APIMemberId': app.session.get('uid') } ) }}" target="_blank"  rel="nofollow" >
-		   {% else %}
-		   <a href="{{ path('_user_login') }}">
-		   {% endif %}
+		   <a href="{{ href_ }}" target="_blank" >
 	        <img src="{{ row.pic_url }}" width="200" height="200" alt="pic url" />
 	        </a>
         </dt>
           <dd class="clearfix">
             <div class="title">
-			   {% if app.session.has('uid')  %}
-			   <a href="{{ row.p_o_url|replace( { 'APIMemberId': app.session.get('uid') } ) }}" target="_blank"  rel="nofollow" >
-			   {% else %}
-			   <a href="{{ path('_user_login') }}">{% endif %}{{ row.p_name }}</a>
+            <a href="{{ href_ }}" target="_blank">{{ row.p_name }}</a>
 		   </div>
            <div class="detail">
             <span class="fl price">￥<strong>{{ row.cur_price }}</strong></span>
