--- a/src/Jili/ApiBundle/Resources/views/Top/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/index.html.twig
@@ -25,7 +25,7 @@
       </div><!-- eof mask -->
     </div><!-- eof timeline -->
 
-{% if not  app.request.isSecure %}
+
 	<div class="w204 fl" style="margin-top:15px;">
     	<div>
         	<script type="text/javascript">
@@ -49,7 +49,6 @@
         </div>
 	</div>
 	<!-- eof ads -->
-{% endif %}
 
   </div><!-- w204 side -->
 
@@ -87,29 +86,14 @@
  
   <div class="w300 fr">
     {% if not app.session.has('uid') %}
-    <div style="display:block;" class="loginFrame">
-      <div id="userLogin">
-        <form action="{{ path('jili_api_top_index') }}" method="post" name="form1" id="form1">
-          {% if code %}
-          <p class="error">{{ code }}</p>
-          {% endif %}
-          <p>
-            <input type="text" name="email" class="text" id="email" value="{{ email }}">
-          </p>
-          <p>
-            <input type="password" name="pwd" class="password" id="password">
-          </p>
-          <p>
-          <input type="image" src="{{ asset('images140307/logBtn.jpg') }}" class="image" id="login" value="登录" name="登录" title="登录">
-            <label>
-              <input type="checkbox" id="rem" value="1" name="remember_me">
-              记住我</label>
-            | <a href="{{ asset(path('_user_resetPwd'),'cdn1') }}" class="forget">忘记密码?</a></p>
-          <p><a href="{{ path('_user_reg') }}" class="reg">免费注册</a></p>
-        </form>
+    
+    <div class="loginFrame">
+      <div id="userLogin"><a class="reg" href="{{ path('_user_reg') }}">免费注册</a></div>
+      <div class="logontxtbg"></div>
+      <div class="f12 c_999 logontxt">
+        已有账号，<a class="corDarkBlue font16" href="{{ path('_user_login') }}">直接登录</a>
       </div>
       <div id="aboutJili">
-          <h3><img src="{{ asset('images140307/aboutJili.jpg') }}" alt="在积粒网能做什么？"></h3>
         <ul class="clearfix">
           <li>100米粒=￥1.00元</li>
           <li>玩游戏，拿返利，答问卷赚积分</li>
@@ -141,6 +125,13 @@
       </div>
       <div class="menu"><a class="month hover">月度</a><a class="year">年度</a></div>
     </div>    <!-- eof ranking   -->
+    <div class="fr" style="margin-top:15px; background:#ccc;">
+    	<script type="text/javascript">
+		/*300*250，纯文字*/
+		var cpro_id = "u1522260";
+		</script>
+		<script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
+    </div>
   </div><!-- w300 side -->
 
 {% endblock %}
