--- a/src/Jili/EmarBundle/Resources/views/base140307.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/base140307.html.twig
@@ -17,6 +17,9 @@
 <script src="{{ asset('js/bottom.js') }}" language="javascript"></script> 
 </head>
 <body>
+
+{% block body_top %}{% endblock %}
+
 <div id="header">
     {% block header %}
        {% include "::header.html.twig" %}
@@ -28,6 +31,9 @@
 </div><!-- eof pageMain -->
 
 {% include 'JiliApiBundle::footer.html.twig' %}
+
+
+{% block body_bottom %}{% endblock %}
 
 </body>
 </html>
