--- a/src/Jili/ApiBundle/Resources/views/Top/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/index.html.twig
@@ -91,7 +91,7 @@
       <div id="userLogin"><a class="reg" href="{{ path('_user_reg') }}">免费注册</a></div>
       <div class="logontxtbg"></div>
       <div class="f12 c_999 logontxt">
-        已有账号，<a class="corDarkBlue font16" href="{{ path('_user_login') }}">直接登录</a>
+        已有账号，<a class="corBrightBlue font16" href="{{ path('_user_login') }}">直接登录</a>
       </div>
       <div id="aboutJili">
         <ul class="clearfix">
