--- a/web/css140307/common.css
+++ b/web/css140307/common.css
@@ -24,6 +24,7 @@ strong, b{font-weight: bold;}
 .corGlobRed{ color:#FF3E17;}
 .corGlobBlue{ color:#65b1ee;}
 .corDarkBlue{ color:#1588e5;}
+.corBrightBlue{ color: #32A5F5;}
 .corWhite{ color:#fff;}
 .division{ margin:0 10px; color:#ccc;}
 .module{ border:2px solid #ff6b4f;}
