--- a/src/Jili/ApiBundle/Resources/views/User/regSuccess.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/regSuccess.html.twig
@@ -14,10 +14,9 @@
 <script src="{{ asset('js/banner.js')}}" type="text/javascript"></script>
 </head>
 <body>
-{% include 'JiliApiBundle::header.html.twig' %}
+{% include 'JiliApiBundle::userHead.html.twig' %}
 <div class="webArticle regStep">
   <article>
-  	<div class="step"><img src="{{ asset('images/step4.jpg')}}" width="960" height="86"></div>
     <div class="regFrame">
     	<div class="finish">
    	    <div class="img"><img src="{{ asset('images/regFinish.jpg')}}" width="108" height="82"></div>
@@ -27,6 +26,6 @@
     </div>
   </article>
 </div>
-{% include 'JiliApiBundle::footer.html.twig' %}
+{% include 'JiliApiBundle::userFoot.html.twig' %}
 </body>
 </html>
