--- a/src/Jili/ApiBundle/Resources/views/User/resetPwd.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/resetPwd.html.twig
@@ -9,6 +9,7 @@
 <!-- [endif] -->
 <link href="{{ asset('css/default.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/password.css')}}" rel="stylesheet" type="text/css" />
+<link href="{{ asset('css/regStep.css')}}" rel="stylesheet" type="text/css" />
 <script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
 <script src="{{ asset('js/banner.js')}}" type="text/javascript"></script>
 <script type="text/javascript">
@@ -53,7 +54,7 @@ function check(){
 </script>
 </head>
 <body>
-{% include 'JiliApiBundle::header.html.twig' %}
+{% include 'JiliApiBundle::userHead.html.twig' %}
 <div class="webArticle password">
   <article>
     <div class="form">
@@ -67,7 +68,7 @@ function check(){
     </div>
   </article>
 </div>
-{% include 'JiliApiBundle::footer.html.twig' %}
+{% include 'JiliApiBundle::userFoot.html.twig' %}
 </body>
 </html>
 
