--- a/src/Jili/ApiBundle/Resources/views/User/setPassWen.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/setPassWen.html.twig
@@ -32,6 +32,7 @@ $(document).ready(function(){
 
 </head>
 <body>
+{% include 'JiliApiBundle::userHead.html.twig' %}
 <div class="webArticle regStep regFrom91ww postionR">
   <article>
     <div class="regForm">
@@ -57,6 +58,7 @@ $(document).ready(function(){
     </div>
   </article>
 </div>
+{% include 'JiliApiBundle::userFoot.html.twig' %}
 </body>
 </html>
 
