--- a/src/Jili/ApiBundle/Resources/views/User/resetPass.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/resetPass.html.twig
@@ -32,7 +32,10 @@ function check(){
     <div class="form">
       <h2>输入邮箱地址 > <span>重置密码</h2>
       {%  if codeflag==1 %}
-          <div class="message"><img src="{{ asset('images/succeed.jpg')}}" width="39" height="44">{{ code }}</div>
+          <div class="message">
+              <img src="{{ asset('images/succeed.jpg')}}" width="39" height="44">{{ code }}
+              <div class="gototop"><a href="{{ path('_homepage') }}" >去首页</a></div>
+          </div>
       {% endif %}
       <ul class="activate">
         <li>
