--- a/src/Jili/ApiBundle/Resources/views/User/changePwd.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/changePwd.html.twig
@@ -9,7 +9,6 @@
 <!-- [endif] -->
 <link href="{{ asset('css/default.css')}}" rel="stylesheet" type="text/css" />
 <link href="{{ asset('css/password.css')}}" rel="stylesheet" type="text/css" />
-<link href="{{ asset('css/regStep.css')}}" rel="stylesheet" type="text/css" />
 <script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
 <script src="{{ asset('js/banner.js')}}" type="text/javascript"></script>
 </head>
@@ -20,7 +19,7 @@ function check(){
 
 </script>
 <body>
-{% include 'JiliApiBundle::userHead.html.twig' %}
+{% include 'JiliApiBundle::header.html.twig' %}
 <div class="webArticle password">
   <article>
     <form action="{{ path('_user_changePwd') }}" method="post" name="form1" id="form1" >
@@ -89,12 +88,6 @@ function check(){
     </form>
   </article>
 </div>
-{% include 'JiliApiBundle::userFoot.html.twig' %}
+{% include 'JiliApiBundle::footer.html.twig' %}
 </body>
 </html>
-
-
-
-
-
- 
