fxied conflicts& recover newbie codes

--- a/src/Jili/ApiBundle/Resources/views/Top/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/index.html.twig
@@ -4,11 +4,13 @@
 {% block stylesheet %}
 <link href="{{ asset('css140307/index.css') }} " rel="stylesheet" type="text/css">
 <link href="{{ asset('css140307/categorys.css') }} " rel="stylesheet" type="text/css">
+<link href="{{ asset('css/newbie.css')  }}" rel="stylesheet"/>
 {% endblock %}
 
 {% block javascript %}
 <script src="{{ asset('js140307/index.js') }}" language="javascript"></script>
 <script src="{{ asset('js140307/categorys.js') }}" language="javascript"></script>
+<script src="{{ asset('js/jl.ui.layer-v4.js') }}" language="javascript"></script>
 {% endblock %}
  
 {% block page_main %}
@@ -135,3 +137,12 @@
   </div><!-- w300 side -->
 
 {% endblock %}
+
+
+{% block body_bottom %}
+{% if is_newbie_passed is defined  and is_newbie_passed == false  %}
+{% include "JiliApiBundle:Top:newbie_partial.html.twig" %}
+{% endif %}
+{% endblock %}
+
+
