--- a/src/Jili/ApiBundle/Resources/views/Top/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/index.html.twig
@@ -125,7 +125,7 @@
       </div>
       <div class="menu"><a class="month hover">月度</a><a class="year">年度</a></div>
     </div>    <!-- eof ranking   -->
-    <div class="fr" style="margin-top:15px; background:#ccc;">
+    <div class="fr" style="margin-top:15px;">
     	<script type="text/javascript">
 		/*300*250，纯文字*/
 		var cpro_id = "u1522260";
