--- a/src/Jili/ApiBundle/Resources/views/User/adtaste.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/adtaste.html.twig
@@ -68,7 +68,7 @@ function addClass(type){
   </aside>
   <article>
   	<div class="screen">
-    <p class="prompt">*&nbsp;商家审核需要8周左右（根据各商城具体情况而定），判定后立即到账（退货无返利）</p>
+    <p class="prompt">*&nbsp;商家审核需要8周左右（部分商城会有延时情况），判定后立即到账（退货无返利）</p>
     <a href="javascript:void(0);" class="hover"  onclick="addClass(0);return false;">全部</a>
   	<a href="javascript:void(0);" onclick="addClass(1);return false;">确认中</a>
   	<a href="javascript:void(0);" onclick="addClass(2);return false;">已完成</a>
