--- a/src/Jili/EmarBundle/Resources/views/base140307.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/base140307.html.twig
@@ -29,5 +29,8 @@
 
 {% include 'JiliApiBundle::footer.html.twig' %}
 
+{% if app.session.has('uid') %}
+	{{ render(controller('JiliApiBundle:Top:checkIn' ) ) }}
+{% endif %}
 </body>
 </html>
