签到和覆盖层问题
签到除首页外打不开，覆盖层重复

--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -97,3 +97,7 @@ $(document).ready(function(){
       </ul>
 	  </div>
 	</div>
+{% if app.session.has('uid') %}
+	{{ render(controller('JiliApiBundle:Top:checkIn' ) ) }}
+{% endif %}
+<div class="blackBg"></div>
