--- a/src/Jili/EmarBundle/Resources/views/Ghs/promotion_on_top.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Ghs/promotion_on_top.html.twig
@@ -1,18 +1,55 @@
 <script type="text/javascript">
-    var next = function() {
-    var i = 2;
-    return function(){
-    return i++;
-    }
-    }();
+    var ghs_list = {
+        last_page: {{ last_page }},
+        current_page: {{ page }}
+    };
+
+var next = function() {
+	var last_page;
+	var fetched;
+	return {
+		init: function(params) {
+			last_page = params.last_page;
+			fetched = [params.current_page];
+		},
+		getLastPage: function() {
+			return last_page;
+		},
+		getFetched: function() {
+			return fetched;
+		},
+		getNext: function() {
+			var pool = [];
+			if (fetched.length > 0 && fetched.length < last_page) {
+
+				for (var i = 1; i <= last_page; i++) {
+					if ( - 1 === fetched.indexOf(i)) {
+						pool.push(i);
+					}
+				}
+			} else {
+				fetched = [];
+				for (var i = 1; i <= last_page; i++) {
+					pool.push(i);
+				}
+			}
+			var ind = Math.floor(Math.random() * (pool.length - 1));
+			var next = pool[ind];
+			fetched.push(next);
+			return next;
+		},
+	}
+} ();
+
 $(document).ready(function(){
     $(".loading").hide();
 
+    next.init(ghs_list);
     //刷新
     $(".more").click(function(){
         $.ajax({
-            url: "{{ path('jili_emar_ghs_promotion') }}/top/6/"+next(),
-            post: "GET",
+            url: "{{ path('jili_emar_ghs_promotion') }}/top/6/"+next.getNext(),
+            post: "POST",
             beforeSend:function(){$(".loading").show();},
             success:function(data){
 
