--- a/src/Jili/ApiBundle/Resources/views/Admin/addPointSearch.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/addPointSearch.html.twig
@@ -48,7 +48,7 @@ $(document).ready(function(){
           <td align="center">{{ item.point }}</td>
           <td align="center">{{ item.category_type }}</td>
           <td align="center">{{ item.task_name }}</td>
-          <td align="center">{{ item.date | date('Y-m-d') }}</td>
+          <td align="center">{{ item.date }}</td>
         </tr>
          {% endfor %}
          {%  endif %}
