Replaced _default_index with _homepage

--- a/src/Jili/ApiBundle/Resources/views/Default/landing.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Default/landing.html.twig
@@ -15,7 +15,7 @@ function fastreg(){
 <body>
 <div id="landing">
   <div id="landingTop">
-    <div id="logo"><a href="{{ path('_default_index') }}" target="_blank"><img src="{{ asset('images/landing2/logo.png') }}" width="142" height="39" alt="积粒网" /></a></div>
+    <div id="logo"><a href="{{ path('_homepage') }}" target="_blank"><img src="{{ asset('images/landing2/logo.png') }}" width="142" height="39" alt="积粒网" /></a></div>
   </div>
   <div id="landingMain" class="clearfix">
     <div class="register">
