--- a/src/Jili/ApiBundle/Resources/views/error.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/error.html.twig
@@ -17,7 +17,7 @@
 {% include 'JiliApiBundle::header.html.twig' %}
 <div class="webArticle error404">
   <article>
-  	返回<a href="{{ path('_default_index') }}">首页</a>
+  	返回<a href="{{ path('_homepage') }}">首页</a>
   </article>
 </div>
 {% include 'JiliApiBundle::footer.html.twig' %}
