--- a/src/Jili/ApiBundle/Resources/views/Exchange/alipayFinish.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/alipayFinish.html.twig
@@ -5,6 +5,6 @@
     <p>兑换将在十个工作日内（遇节假日顺延）完成支付宝充值手续，请关注您的<a href="{{ asset(path('_user_exchange',{'type':3,'exchangeType':1 }),'cdn1') }}" >兑换历史</a>，来及时了解兑换状态。</p>
     <hr />
     <p>※ 如果兑换失败，积分会自动返还到您的积粒网帐户。</p>
-    <p><a href="{{ path('_default_index') }}">返回首页</a></p>
+    <p><a href="{{ path('_homepage') }}">返回首页</a></p>
   </div>
 </div>
