--- a/src/Jili/ApiBundle/Resources/views/Exchange/jiliFinish.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/jiliFinish.html.twig
@@ -5,6 +5,6 @@
     <p>兑换将在下一个工作日（遇节假日顺延）完成，请关注您的兑换状态邮件通知。</p>
     <hr />
     <p>※ 如您的信息有误造成兑换失败，米粒将会自动返还到您的账户。</p>
-    <p><a href="{{ path('_default_index') }}">返回首页</a></p>
+    <p><a href="{{ path('_homepage') }}">返回首页</a></p>
   </div>
 </div>
