--- a/src/Jili/ApiBundle/Resources/views/Exchange/mobileFinish.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/mobileFinish.html.twig
@@ -5,6 +5,6 @@
     <p>兑换会在三个工作日内完成（遇周末及节假日顺延），请关注您的<a href="{{ asset(path('_user_exchange',{'type':4,'exchangeType':1 }),'cdn1') }}" >兑换历史</a>，来及时了解兑换状态。</p>
     <hr />
     <p>※ 如果兑换失败，积分会自动返还到您的积粒网帐户。</p>
-    <p><a href="{{ path('_default_index') }}">返回首页</a></p>
+    <p><a href="{{ path('_homepage') }}">返回首页</a></p>
   </div>
 </div>
