--- a/src/Jili/ApiBundle/Resources/views/Admin/pointManage.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/pointManage.html.twig
@@ -14,10 +14,6 @@ return false;
 <BODY>
 <form action="{{ path('_admin_addPointManage') }}" method="post" id="form1" enctype="multipart/form-data"  name="myForm" onSubmit="check();">
 <table align='center'>
-<tr><td>手动增加积分类型:</td><td><select name="categoryId">
-<option value="90">手动返还积分</option>
-<option value="21">活动送积分</option>
-</select></td></tr>
 <tr><td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr><td>csv导入:
 <input type="file" name="csv" /></td><td>&nbsp;</td></tr>
@@ -29,10 +25,11 @@ return false;
 </form>
 <p>注：请上传csv格式，文件编码为utf-8的文件</p>
 <p>&nbsp;</p>
-<p>csv文件内容参考(邮箱,增加的积分,积分类型)：</p>
+<p>csv文件内容参考(email,point,category_type,task_name,task_type)：</p>
 <p>&nbsp;</p>
-<p>test@test.com.cn,50,活动送积分</p>
-<p>test2@test.com.cn,60,购物返利送积分</p>
+<p>email,point,task_name,category_type,task_type</p>
+<p>test@test.com.cn,50,活动送积分,90,4</p>
+<p>test2@test.com.cn,60,购物返利送积分,21,4</p>
 {% if code %}
     {% for item in code %}
         <center><font color='red'>{{ item }}</font></center>
