--- a/src/Jili/ApiBundle/Resources/views/Admin/pointManage.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/pointManage.html.twig
@@ -25,11 +25,11 @@ return false;
 </form>
 <p>注：请上传csv格式，文件编码为utf-8的文件</p>
 <p>&nbsp;</p>
-<p>csv文件内容参考(email,point,category_type,task_name,task_type)：</p>
+<p>csv文件内容参考(user_id,email,point,category_type,task_name,task_type)：</p>
 <p>&nbsp;</p>
-<p>email,point,task_name,category_type,task_type</p>
-<p>test@test.com.cn,50,活动送积分,90,4</p>
-<p>test2@test.com.cn,60,购物返利送积分,21,4</p>
+<p>user_id,email,point,task_name,category_type,task_type</p>
+<p>1057685,test@test.com.cn,50,活动送积分,90,4</p>
+<p>1057685,test2@test.com.cn,60,购物返利送积分,21,4</p>
 {% if code %}
     {% for item in code %}
         <center><font color='red'>{{ item }}</font></center>
