--- a/src/Jili/ApiBundle/Resources/views/Advertiserment/list.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Advertiserment/list.html.twig
@@ -17,7 +17,7 @@
 <body>
 {% include 'JiliApiBundle::header.html.twig' %}
 <div class="webArticle adList">
-  <article {% if ads %} {% else %} style="margin-left: 100px;" {% endif %}>
+  <article {% if ads %} {% else %} {% endif %}>
     <!--  subnav  -->
     <div class="offwowSubnav">
         <ul class="subnavList">
