--- a/web/css140307/common.css
+++ b/web/css140307/common.css
@@ -1,4 +1,4 @@
-body{font: 12px/1.5 tahoma,'Hiragino Sans GB','microsoft yahei',sans-serif; font-size:12px; color:#333; background-color:#f4f4f4;}
+
 .page{ width:1150px; margin:auto;}
 .pageMain{ padding:15px 0;}
 .fl{float:left;}
@@ -12,7 +12,9 @@ body{font: 12px/1.5 tahoma,'Hiragino Sans GB','microsoft yahei',sans-serif; font
 .w834{ width:834px;}
 .w930{ width:930px;}
 .h340{ height:340px;}
+.fontOrig{font-family: Arial, Helvetica, sans-serif;}
 .fontNormal{ font-weight:normal; font-size:12px;}
+.font14{ font-size:14px;}
 .font16{ font-size:16px;}
 h5{font-size: 1.17em;font-weight: bold;}
 strong, b{font-weight: bold;}
