--- a/web/css140307/index.css
+++ b/web/css140307/index.css
@@ -559,22 +559,22 @@
 #getMallList li em {
 	color: #FF3E17;
 }
-#indexRecommend{ position:relative;}
-#indexRecommend ul li {	background-color: #FFFFFF; float: left; margin:0 7px 7px 0; padding:0 0 14px; width: 200px; overflow: hidden; position:relative;}
+#indexRecommend{ background-color: #FFFFFF; position:relative; padding: 10px 0 0 13px; margin-bottom:10px;}
+#indexRecommend ul li {	background-color: #FFFFFF; float: left; margin:0 12px 0 0; padding:0 0 13px; width: 188px; overflow: hidden; position:relative;}
 #indexRecommend ul li.mr0 {	margin-right: 0;}
-#indexRecommend ul li p { padding: 0px 10px;}
+#indexRecommend ul li p { padding: 0 10px 0 0;}
 #indexRecommend ul li p.image {	padding: 0;	margin-bottom: 5px;}
 #indexRecommend ul li p.image a img{ width:200px; height:auto;}
-#indexRecommend ul li p.name{ height:20px; overflow:hidden;}
-#indexRecommend ul li p.price {	color: #FF3E17; line-height: 176%;}
-#indexRecommend ul li p.price .price1{}
-#indexRecommend ul li p.price .price2 {	font-size: 22px; margin:0 3px;}
+#indexRecommend ul li p.name{ height:20px; overflow:hidden; font-weight:bold;}
+#indexRecommend ul li p.price {	color: #FF3E17; line-height: 180%;}
+#indexRecommend ul li p.price .price1{font-size: 15px; font-weight: bold;}
+#indexRecommend ul li p.price .price2 {	font-size: 22px; margin:0 5px 0 0; font-weight:bold;}
 #indexRecommend ul li p.price .discount{ font-size: 12px;float: right; margin: 7px 0 0; text-align:right; line-height: 19px;} 
 #indexRecommend ul li p del { text-decoration: line-through; margin-right: 5px;}
-#indexRecommend .menu{ position:absolute; right:0; top:0;}
+#indexRecommend .menu{ position:absolute; right:14px; top:10px;}
 #indexRecommend .menu a.more{background: url("../images140307/iconImage.png") no-repeat scroll 0 -897px; padding-left:20px;}
 #indexRecommend .menu a.more:hover{background: url("../images140307/iconImage.png") no-repeat scroll 0 -937px; color:#ff6b4f;}
-#indexRecommend ul li .model{background: #ff6b4f;width: 175px;height: 33px;color: #fff;text-align: center;position: absolute;left: 0;bottom: 0;opacity: .85;filter: alpha(opacity=85);display:none;padding:27px 21px 24px 12px;}
+#indexRecommend ul li .model{background: #ff6b4f;width: 175px;height: 31px;color: #fff;text-align: center;position: absolute;left: 0;bottom: 0;opacity: .85;filter: alpha(opacity=85);display:none;padding:27px 21px 24px 12px;}
 #indexRecommend ul li .model strong{font-size: 16px; margin-left: 10px; vertical-align: 5px;}
 #marketActivity ul {
 	padding: 10px;
