--- a/src/Jili/ApiBundle/Resources/views/User/adtaste.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/adtaste.html.twig
@@ -68,12 +68,10 @@ function addClass(type){
   </aside>
   <article>
   	<div class="screen">
-    <p class="prompt">*&nbsp;商家审核需要8周左右（部分商城会有延时情况），判定后立即到账（退货无返利）</p>
     <a href="javascript:void(0);" class="hover"  onclick="addClass(0);return false;">全部</a>
   	<a href="javascript:void(0);" onclick="addClass(1);return false;">确认中</a>
   	<a href="javascript:void(0);" onclick="addClass(2);return false;">已完成</a>
   	<a href="javascript:void(0);" onclick="addClass(3);return false;">已拒绝</a>
-  	
   	</div>
     <table>
     	<tr>
@@ -131,6 +129,10 @@ function addClass(type){
          
     </table>
     {{ knp_pagination_render(pagination) }}
+    <div class="prompt">
+        <p>*&nbsp;部分商家(如亚马逊)的购买记录可能会延时1~2天显示</p>
+        <p>*&nbsp;商家审核需要8周左右（部分商家会有延时情况），判定后立即到账（退货无返利）</p>
+    </div>
   </article>
 </div>
 {% include 'JiliApiBundle::footer.html.twig' %}
