--- a/web/css140307/commodity834.css
+++ b/web/css140307/commodity834.css
@@ -15,3 +15,4 @@ ul.commodityByWeb li dt a img{height: 200px; width: auto;}
 ul.commodityByWeb li dt,ul.co	mmodityByWeb li dd{ text-align:center;}
 ul.commodityByWeb li dd{ text-align:center;}
 ul.commodityByWeb li dd .price em{ text-decoration:line-through; margin-left:5px;}
+ul.commodityByWeb li dd .textLimit{ height:20px; overflow:hidden;}
