--- a/web/css140307/common.css
+++ b/web/css140307/common.css
@@ -69,7 +69,7 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 /* top search/ */
 
 #headerContent .otherInlet{ float:right; margin-top:10px; margin-right:70px;}
-#headerContent .otherInlet .help{ font-size:16px; display:block; background:url("../images140307/iconImage.png") no-repeat scroll 0 -58px; padding-left:25px; color:#666;}
+#headerContent .otherInlet .help{ font-size:16px; background:url("../images140307/iconImage.png") no-repeat scroll 0 -58px; padding-left:25px; color:#666;}
 #nav{width:100%; height:40px; line-height:40px; background-color:#FF6B4F;}
 #nav li{ float:left; font-size:16px; margin:0 22px; position:relative;}
 #nav li.first{ margin-right:0;}
