--- a/web/css140307/common.css
+++ b/web/css140307/common.css
@@ -40,7 +40,7 @@ strong, b{font-weight: bold;}
 .boxShadowGlobal{-moz-box-shadow:1px 1px 6px #ddd,1px -1px 6px #ddd;-webkit-box-shadow:1px 1px 6px #ddd,1px -1px 6px #ddd;box-shadow: 1px 1px 6px #ddd,1px -1px 6px #ddd;}
 select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input{ color:#666;}
 #header{ width:100%;}
-#topbar{ background-color:#F6F6F6; width:100%; height:30px; line-height:30px; color:#666;}
+#topbar{ background-color:#F6F6F6; width:100%; height:30px; line-height:30px; color:#666; border-bottom: 1px solid #E7E7E7;}
 #userbar{ float:right; position:relative;}
 #userbar li{ float:left; line-height: 28px;}	
 #userbar li.split { background: none repeat scroll 0 0 #CCC; color: #CCC; height: 12px; margin: 9px; width: 1px; overflow:hidden;}
@@ -70,11 +70,11 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 
 #headerContent .otherInlet{ float:right; margin-top:10px; margin-right:70px;}
 #headerContent .otherInlet .help{ font-size:16px; background:url("../images140307/iconImage.png") no-repeat scroll 0 -58px; padding-left:25px; color:#666;}
-#nav{width:100%; height:40px; line-height:40px; background-color:#FF6B4F;}
+#nav{width:100%; height:45px; line-height:45px; background-color:#FF6B4F;}
 #nav li{ float:left; font-size:16px; margin:0 22px; position:relative;}
 #nav li.first{ margin-right:0;}
 #nav li.second{ margin-left:0;}
-#nav li.task{ width:204px; margin-left:0; background:url("../images140307/iconImage.png") no-repeat scroll 175px -193px #65B1EE; z-index:504;}
+#nav li.task{ width:204px; margin-left:0; background:url("../images140307/iconImage.png") no-repeat scroll 175px -193px #65B1EE; z-index:504; position:relative;}
 #nav li.task ul{ background-color:#F1F7FB; border:2px solid #65B1EE; border-top:none; position:absolute; top:40px; left:0; z-index:9999; display:none;}
 #nav li.task ul li{font-size:12px; border-top:1px #D5E3E9 dotted; width:100%; margin:0;}
 #nav li.task ul li a{font-size:12px; color:#666; padding-left: 15px; width: 185px; display:inline-block; position:relative;}
@@ -83,7 +83,7 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 #nav li.task ul li span{ right:0; margin-right:15px; position:absolute; top:0;}
 #nav li a{ color:#FFF;}
 #nav li.task a.taskBtn{ background: url("../images140307/iconImage.png") no-repeat scroll 15px -157px; padding-left: 40px;}
-#nav li.task em{background-color: #FFFFFF; -moz-border-radius: 7px; -webkit-border-radius: 7px; border-radius: 7px; color: #65B1EE; display: inline-block; font-size: 13px; font-weight:bold;line-height: 100%; margin: 0 8px; padding:2px 5px;}
+#nav li.task em{position:absolute; right: 36px; bottom: 31px; background: url("../images140307/iconImage2.png") no-repeat scroll 0 -257px; height: 24px; line-height: 24px; width: 30px; color: #fff; text-align:center; display: inline-block; font-size: 13px; font-weight:bold;}
 #nav li.navSelectedBg{ background:#de4528; padding:0 30px;}
 
 .main h1,.commodityList h1{ font-size:16px; line-height:40px;}
