refactor all cpro tmpl

--- a/src/Jili/ApiBundle/Resources/views/Callboard/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Callboard/info.html.twig
@@ -24,11 +24,8 @@
     </div>
   </article>
   <aside style="width:360px; height:300px; float:right; margin-top: 0;">
-  	<script type="text/javascript">
-	/*360*300，纯文字*/
-	var cpro_id = "u1522204";
-	</script>
-	<script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
+  {# 360*300，纯文字 #} 
+  {% include "JiliApiBundle:Ads:cpro_baidu.html.twig" with { cpro_id:"u1522204" } %}
   </aside>
   
 </div>
