--- a/src/Jili/ApiBundle/Resources/views/Top/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/index.html.twig
@@ -30,24 +30,15 @@
 
 	<div class="w204 fl" style="margin-top:15px;">
     	<div>
-        	<script type="text/javascript">
-			/*200*90，纯文字*/
-			var cpro_id = "u1522251";
-			</script>
-			<script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
+            {# 200*90，纯文字 #} 
+            {% include "JiliApiBundle:Ads:cpro_baidu.html.twig" with { cpro_id:"u1522251" } %}
 			
-			<script type="text/javascript">
-			/*200*90，纯文字*/
-			var cpro_id = "u1522251";
-			</script>
-			<script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
+            {# 200*90，纯文字 #} 
+            {% include "JiliApiBundle:Ads:cpro_baidu.html.twig" with { cpro_id:"u1522251" } %}
         </div>
 	    <div class="marginT15">
-        	<script type="text/javascript">
-			/*200*200，纯图片*/
-			var cpro_id = "u1522038";
-			</script>
-			<script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
+            {# 200*200，纯文字 #} 
+            {% include "JiliApiBundle:Ads:cpro_baidu.html.twig" with { cpro_id:"u1522038" } %}
         </div>
 	</div>
 	<!-- eof ads -->
@@ -128,11 +119,8 @@
       <div class="menu"><a class="month hover">月度</a><a class="year">年度</a></div>
     </div>    <!-- eof ranking   -->
     <div class="fr" style="margin-top:15px;">
-    	<script type="text/javascript">
-		/*300*250，纯文字*/
-		var cpro_id = "u1522260";
-		</script>
-		<script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
+        {# 300*250，纯文字 #} 
+        {% include "JiliApiBundle:Ads:cpro_baidu.html.twig" with { cpro_id:"u1522260" } %}
     </div>
   </div><!-- w300 side -->
 
