--- a/src/Jili/ApiBundle/Resources/views/MarketActivity/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/MarketActivity/index.html.twig
@@ -103,17 +103,11 @@ $(document).ready(function() {
         <!--<div class="loading"><img src="{{ asset('other/loading.gif') }}" width="48" height="48"></div>-->
     </div>
 	<div style="width: 160px; top: 30px; right: 0; position: absolute; height: 600px;">
-		<script type="text/javascript">
-		/*160*90，创建于2014-4-14*/
-		var cpro_id = "u1522223";
-		</script>
-		<script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
-	
-		<script type="text/javascript">
-		/*160*600，创建于2014-4-2*/
-		var cpro_id = "u1510122";
-		</script>
-		<script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script> 
+        {# 160*90，创建于2014-4-14 #} 
+        {% include "JiliApiBundle:Ads:cpro_baidu.html.twig" with { cpro_id:"u1522223" } %}
+
+        {# 160*600，创建于2014-4-2 #} 
+        {% include "JiliApiBundle:Ads:cpro_baidu.html.twig" with { cpro_id:"u1510122" } %}
 	</div>
 </div>
 
