--- a/src/Jili/EmarBundle/Resources/views/Product/search.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Product/search.html.twig
@@ -40,25 +40,16 @@
     </div>
 	<div class="fl">
 		<div>
-			<script type="text/javascript">
-            /*200*90，纯文字*/
-            var cpro_id = "u1522251";
-            </script>
-            <script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
+            {# 200*90，纯文字 #} 
+            {% include "JiliApiBundle:Ads:cpro_baidu.html.twig" with { cpro_id:"u1522251" } %}
         </div>
 		<div>
-			<script type="text/javascript">
-            /*200*90，纯文字*/
-            var cpro_id = "u1522251";
-            </script>
-            <script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
+            {# 200*90，纯文字 #} 
+            {% include "JiliApiBundle:Ads:cpro_baidu.html.twig" with { cpro_id:"u1522251" } %}
         </div>
         <div class="marginT15">
-        	<script type="text/javascript">
-			/*200*200，纯图片*/
-			var cpro_id = "u1522038";
-			</script>
-			<script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
+            {# 200*200，纯图片 #} 
+            {% include "JiliApiBundle:Ads:cpro_baidu.html.twig" with { cpro_id:"u1522038" } %}
         </div>
 	</div>
     
